--- a/RePhoto/MainPage.xaml
+++ b/RePhoto/MainPage.xaml
@@ -7,7 +7,7 @@
       <!--Pivot item one-->
       <controls:PivotItem Header="actions">
         <!--Double line list with text wrapping-->
-        <ListBox Margin="0,0,-12,0" ItemsSource="{Binding ActionItems}">
+        <ListBox Margin="0,0,-12,0" ItemsSource="{Binding ActionItems}" SelectionChanged="ListBox_SelectionChanged">
           <ListBox.ItemTemplate>
             <DataTemplate>
               <StackPanel Margin="0,0,0,17" Width="432" Height="78">
