--- a/RePhoto/Rephoto.xaml
+++ b/RePhoto/Rephoto.xaml
@@ -1,5 +1,8 @@
-﻿<phone:PhoneApplicationPage x:Class="RePhoto.Rephoto" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone" xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:RePhoto.Converters"
-  xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" FontFamily="{StaticResource PhoneFontFamilyNormal}" FontSize="{StaticResource PhoneFontSizeNormal}" Foreground="{StaticResource PhoneForegroundBrush}" SupportedOrientations="Portrait" Orientation="Portrait" mc:Ignorable="d" d:DesignHeight="696" d:DesignWidth="480" shell:SystemTray.IsVisible="True">
+﻿<phone:PhoneApplicationPage x:Class="RePhoto.Rephoto" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone" xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone" xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:RePhoto.Converters"
+  xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" FontFamily="{StaticResource PhoneFontFamilyNormal}" FontSize="{StaticResource PhoneFontSizeNormal}" Foreground="{StaticResource PhoneForegroundBrush}"
+  SupportedOrientations="Portrait" Orientation="Portrait" mc:Ignorable="d" d:DesignHeight="696" d:DesignWidth="480" shell:SystemTray.IsVisible="True">
 
   <!--LayoutRoot is the root grid where all page content is placed-->
   <Grid x:Name="LayoutRoot" Background="Transparent">
@@ -15,27 +18,28 @@
 
     <!--ContentPanel - place additional content here-->
     <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <Canvas x:Name="viewfinderCanvas" IsHitTestVisible="False" Tap="CameraCaptureTap" Visibility="{Binding Picture, Converter={StaticResource NotNullToVisibilityConverter}}">
+      <Canvas x:Name="viewfinderCanvas" IsHitTestVisible="False" Visibility="{Binding Picture, Converter={StaticResource NotNullToVisibilityConverter}}">
         <Canvas.Background>
-          <VideoBrush x:Name="viewFinderBrush" >
+          <VideoBrush x:Name="viewFinderBrush">
             <VideoBrush.RelativeTransform>
               <CompositeTransform x:Name="cameraViewBrushTransform" CenterX=".5" CenterY=".5" />
             </VideoBrush.RelativeTransform>
           </VideoBrush>
         </Canvas.Background>
+        <Image Grid.Row="0" Grid.RowSpan="3" Source="{Binding OverlayedPicture}" Opacity="{Binding MaskOpacityLevel}">
+          <Image.OpacityMask>
+            <ImageBrush ImageSource="{Binding OpacityMask}" Stretch="None" />
+          </Image.OpacityMask>
+        </Image>
       </Canvas>
-      <Grid  Visibility="{Binding Picture, Converter={StaticResource NotNullToVisibilityConverter}}">
+      <Grid Visibility="{Binding Picture, Converter={StaticResource NotNullToVisibilityConverter}}">
         <Grid.RowDefinitions>
           <RowDefinition Height="Auto" />
           <RowDefinition Height="Auto" />
           <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Image Grid.Row="0" Grid.RowSpan="3" Source="{Binding OverlayedPicture}">
-          <Image.OpacityMask>
-            <ImageBrush ImageSource="{Binding OpacityMask}" Stretch="None"/>
-          </Image.OpacityMask>
-        </Image>
-              <Image Grid.Row="0" Grid.RowSpan="3" Source="{Binding Picture}" Visibility="{Binding Picture, Converter={StaticResource NullToVisibilityConverter}}"/>
+
+        <Image Grid.Row="0" Grid.RowSpan="3" Source="{Binding Picture}" Visibility="{Binding Picture, Converter={StaticResource NullToVisibilityConverter}}" />
 
         <Image Grid.Row="0" HorizontalAlignment="Right" Stretch="None" Source="/Images/appbar.basecircle.rest.png" Margin="0,0,25,0" />
         <Button Grid.Row="0" HorizontalAlignment="Right" Click="CameraCaptureClick" Margin="0,3,0,0" BorderBrush="{x:Null}">
@@ -46,17 +50,28 @@
           <Image Stretch="None" Source="/Images/appbar.feature.settings.rest.png" />
         </Button>
       </Grid>
-            <StackPanel VerticalAlignment="Bottom" Visibility="{Binding ConfiguringSettings, Converter={StaticResource BooleanToVisibilityConverter}}">
-                <TextBlock Text="image masks" Style="{StaticResource PhoneTextLargeStyle}"/>
-                <toolkit:ListPicker ItemsSource="{Binding Fills}"/>
-                <TextBlock Text="opacity" Style="{StaticResource PhoneTextLargeStyle}"/>
-                <Slider Value="{Binding MaskOpacityLevel}" Minimum="0" Maximum="100"/>
-                <TextBlock Text="size" Style="{StaticResource PhoneTextLargeStyle}"/>
-                <Slider Value="{Binding MaskSizeLevel}" Minimum="0" Maximum="100"/>
-            </StackPanel>
+
+      <StackPanel VerticalAlignment="Bottom" Visibility="{Binding ConfiguringSettings, Converter={StaticResource BooleanToVisibilityConverter}}" Background="{StaticResource PhoneSemitransparentBrush}">
+        <StackPanel.Resources>
+          <Style TargetType="Slider">
+            <Setter Property="Margin" Value="0,-5,0,-25" />
+          </Style>
+                    <!--<Style x:Name="ImageMaskTemplate" TargetType="toolkit:ListPickerItem">
+                        <Setter Property="Template" Value=""
+                    </Style>-->
+                </StackPanel.Resources>
+        <TextBlock Text="image masks" Style="{StaticResource PhoneTextNormalStyle}" />
+        <toolkit:ListPicker ItemsSource="{Binding Fills}" SelectedItem="{Binding SelectedFill, Mode=TwoWay}" ItemTemplate="{StaticResource ImageMaskTemplate}"/>
+        <TextBlock Text="opacity" Style="{StaticResource PhoneTextNormalStyle}" />
+        <Slider Value="{Binding MaskOpacityLevel, Mode=TwoWay}" Minimum="0" Maximum="1" />
+        <TextBlock Text="size" Style="{StaticResource PhoneTextNormalStyle}" />
+        <Slider Value="{Binding MaskSizeLevel, Mode=TwoWay}" Minimum="1" Maximum="100" />
+        <TextBlock Text="rotation" Style="{StaticResource PhoneTextNormalStyle}" />
+        <Slider Value="{Binding MaskRotation, Mode=TwoWay}" Minimum="0" Maximum="360" />
+      </StackPanel>
 
       <StackPanel Visibility="{Binding Picture, Converter={StaticResource NullToVisibilityConverter}}" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom">
-        <Button Content="Accept" Width="200" Click="SavePhoto"/>
+        <Button Content="Accept" Width="200" Click="SavePhoto" />
         <Button Content="Retake" Width="200" Click="RetakePhoto" />
       </StackPanel>
     </Grid>
@@ -64,10 +79,10 @@
  
   <!--Sample code showing usage of ApplicationBar-->
   <phone:PhoneApplicationPage.ApplicationBar>
-        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
-            <shell:ApplicationBarIconButton IconUri="/Images/appbar.check.rest.png" Text="done" Click="AcceptSettings"/>
-            <shell:ApplicationBarIconButton IconUri="/Images/appbar.folder.rest.png" Text="select photo" Click="CameraCaptureClick"/>
-        </shell:ApplicationBar>
-    </phone:PhoneApplicationPage.ApplicationBar>
+    <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
+      <shell:ApplicationBarIconButton IconUri="/Images/appbar.check.rest.png" Text="done" Click="AcceptSettings" />
+      <shell:ApplicationBarIconButton IconUri="/Images/appbar.folder.rest.png" Text="select photo" Click="CameraCaptureClick" />
+    </shell:ApplicationBar>
+  </phone:PhoneApplicationPage.ApplicationBar>
 
 </phone:PhoneApplicationPage>
