--- a/RePhoto/Rephoto.xaml
+++ b/RePhoto/Rephoto.xaml
@@ -1,15 +1,11 @@
-﻿<phone:PhoneApplicationPage x:Class="RePhoto.Rephoto" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone" xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone" xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:RePhoto.Converters"
-  xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" FontFamily="{StaticResource PhoneFontFamilyNormal}" FontSize="{StaticResource PhoneFontSizeNormal}" Foreground="{StaticResource PhoneForegroundBrush}"
-  SupportedOrientations="Portrait" Orientation="Portrait" mc:Ignorable="d" d:DesignHeight="696" d:DesignWidth="480" shell:SystemTray.IsVisible="True">
+﻿<phone:PhoneApplicationPage x:Class="RePhoto.Rephoto" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone" xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:RePhoto.Converters" xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" FontFamily="{StaticResource PhoneFontFamilyNormal}" FontSize="{StaticResource PhoneFontSizeNormal}" Foreground="{StaticResource PhoneForegroundBrush}" SupportedOrientations="Portrait" Orientation="Portrait" mc:Ignorable="d" d:DesignHeight="696" d:DesignWidth="480" shell:SystemTray.IsVisible="True">
 
   <!--LayoutRoot is the root grid where all page content is placed-->
   <Grid x:Name="LayoutRoot" Background="Transparent">
     <Grid.Resources>
       <local:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
       <local:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
-      <local:NotNullToVisibilityConverter x:Key="NotNullToVisibilityConverter" />
+      <local:NotNullIsVisibleConverter x:Key="NotNullToVisibilityConverter" />
     </Grid.Resources>
     <Grid.RowDefinitions>
       <RowDefinition Height="Auto" />
@@ -26,11 +22,14 @@
             </VideoBrush.RelativeTransform>
           </VideoBrush>
         </Canvas.Background>
-        <Image Grid.Row="0" Grid.RowSpan="3" Source="{Binding OverlayedPicture}" Opacity="{Binding MaskOpacityLevel}">
+      </Canvas>
+      <Canvas>
+        <Image Source="{Binding OverlayedPicture}" Opacity="{Binding MaskOpacityLevel}">
           <Image.OpacityMask>
             <ImageBrush ImageSource="{Binding OpacityMask}" Stretch="None" />
           </Image.OpacityMask>
         </Image>
+        <Image Source="{Binding Picture}" Visibility="{Binding Picture, Converter={StaticResource NullToVisibilityConverter}}" />
       </Canvas>
       <Grid Visibility="{Binding Picture, Converter={StaticResource NotNullToVisibilityConverter}}">
         <Grid.RowDefinitions>
@@ -38,8 +37,6 @@
           <RowDefinition Height="Auto" />
           <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-
-        <Image Grid.Row="0" Grid.RowSpan="3" Source="{Binding Picture}" Visibility="{Binding Picture, Converter={StaticResource NullToVisibilityConverter}}" />
 
         <Image Grid.Row="0" HorizontalAlignment="Right" Stretch="None" Source="/Images/appbar.basecircle.rest.png" Margin="0,0,25,0" />
         <Button Grid.Row="0" HorizontalAlignment="Right" Click="CameraCaptureClick" Margin="0,3,0,0" BorderBrush="{x:Null}">
@@ -54,25 +51,23 @@
       <StackPanel VerticalAlignment="Bottom" Visibility="{Binding ConfiguringSettings, Converter={StaticResource BooleanToVisibilityConverter}}" Background="{StaticResource PhoneSemitransparentBrush}">
         <StackPanel.Resources>
           <Style TargetType="Slider">
-            <Setter Property="Margin" Value="0,-5,0,-25" />
+            <Setter Property="Margin" Value="0,-5,0,-15" />
           </Style>
-                    <!--<Style x:Name="ImageMaskTemplate" TargetType="toolkit:ListPickerItem">
-                        <Setter Property="Template" Value=""
-                    </Style>-->
-                </StackPanel.Resources>
+          <DataTemplate x:Key="ImageMaskTemplate">
+            <TextBlock Text="{Binding Key}" />
+          </DataTemplate>
+        </StackPanel.Resources>
         <TextBlock Text="image masks" Style="{StaticResource PhoneTextNormalStyle}" />
-        <toolkit:ListPicker ItemsSource="{Binding Fills}" SelectedItem="{Binding SelectedFill, Mode=TwoWay}" ItemTemplate="{StaticResource ImageMaskTemplate}"/>
+        <toolkit:ListPicker ItemsSource="{Binding Fills}" SelectedItem="{Binding SelectedFill, Mode=TwoWay}" ItemTemplate="{StaticResource ImageMaskTemplate}" />
         <TextBlock Text="opacity" Style="{StaticResource PhoneTextNormalStyle}" />
         <Slider Value="{Binding MaskOpacityLevel, Mode=TwoWay}" Minimum="0" Maximum="1" />
         <TextBlock Text="size" Style="{StaticResource PhoneTextNormalStyle}" />
         <Slider Value="{Binding MaskSizeLevel, Mode=TwoWay}" Minimum="1" Maximum="100" />
-        <TextBlock Text="rotation" Style="{StaticResource PhoneTextNormalStyle}" />
-        <Slider Value="{Binding MaskRotation, Mode=TwoWay}" Minimum="0" Maximum="360" />
       </StackPanel>
 
       <StackPanel Visibility="{Binding Picture, Converter={StaticResource NullToVisibilityConverter}}" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom">
-        <Button Content="Accept" Width="200" Click="SavePhoto" />
-        <Button Content="Retake" Width="200" Click="RetakePhoto" />
+        <Button Content="Accept" Width="200" Click="SavePhoto" Background="{StaticResource PhoneSemitransparentBrush}"/>
+        <Button Content="Retake" Width="200" Click="RetakePhoto" Background="{StaticResource PhoneSemitransparentBrush}"/>
       </StackPanel>
     </Grid>
   </Grid>
