--- a/RePhoto/Rephoto.xaml
+++ b/RePhoto/Rephoto.xaml
@@ -1,4 +1,8 @@
-﻿<phone:PhoneApplicationPage x:Class="RePhoto.Rephoto" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone" xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:RePhoto.Converters" xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" FontFamily="{StaticResource PhoneFontFamilyNormal}" FontSize="{StaticResource PhoneFontSizeNormal}" Foreground="{StaticResource PhoneForegroundBrush}" SupportedOrientations="Portrait" Orientation="Portrait" mc:Ignorable="d" d:DesignHeight="696" d:DesignWidth="480" shell:SystemTray.IsVisible="True">
+﻿<phone:PhoneApplicationPage x:Class="RePhoto.Rephoto" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone" xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone" xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:RePhoto.Converters" xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
+  FontFamily="{StaticResource PhoneFontFamilyNormal}" FontSize="{StaticResource PhoneFontSizeNormal}" Foreground="{StaticResource PhoneForegroundBrush}" SupportedOrientations="Portrait" Orientation="Portrait" mc:Ignorable="d" d:DesignHeight="696"
+  d:DesignWidth="480" shell:SystemTray.IsVisible="True">
 
   <!--LayoutRoot is the root grid where all page content is placed-->
   <Grid x:Name="LayoutRoot" Background="Transparent">
@@ -13,7 +17,7 @@
     </Grid.RowDefinitions>
 
     <!--ContentPanel - place additional content here-->
-    <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
+    <Grid x:Name="ContentPanel" Grid.Row="1">
       <Canvas x:Name="viewfinderCanvas" IsHitTestVisible="False" Visibility="{Binding Picture, Converter={StaticResource NotNullToVisibilityConverter}}">
         <Canvas.Background>
           <VideoBrush x:Name="viewFinderBrush">
@@ -24,8 +28,8 @@
         </Canvas.Background>
       </Canvas>
       <Canvas>
-        <Image Width="480" Height="800" Source="{Binding Picture}" Visibility="{Binding Picture, Converter={StaticResource NullToVisibilityConverter}}" Stretch="UniformToFill" />
-        <Image Width="480" Height="800" Source="{Binding OverlayedPicture}" Opacity="{Binding MaskOpacityLevel}">
+        <Image Width="480" Height="696" Source="{Binding Picture}" Visibility="{Binding Picture, Converter={StaticResource NullToVisibilityConverter}}" Stretch="UniformToFill" />
+                <Image Width="480" Height="696" Source="{Binding OverlayedPicture}" Opacity="{Binding MaskOpacityLevel}" Stretch="UniformToFill" >
           <Image.OpacityMask>
             <ImageBrush ImageSource="{Binding OpacityMask}" Stretch="None" />
           </Image.OpacityMask>
@@ -33,7 +37,7 @@
         <toolkit:PerformanceProgressBar x:Name="performanceProgressBar" VerticalAlignment="Center" />
       </Canvas>
 
-      <StackPanel VerticalAlignment="Bottom" Visibility="{Binding ConfiguringSettings, Converter={StaticResource BooleanToVisibilityConverter}}" Background="{StaticResource PhoneSemitransparentBrush}">
+      <StackPanel VerticalAlignment="Bottom" Visibility="{Binding ConfiguringSettings, Converter={StaticResource BooleanToVisibilityConverter}}" Background="{StaticResource PhoneSemitransparentBrush}" Margin="12,0,12,0">
         <StackPanel.Resources>
           <Style TargetType="Slider">
             <Setter Property="Margin" Value="0,-5,0,-15" />
