--- a/RePhoto/Rephoto.xaml
+++ b/RePhoto/Rephoto.xaml
@@ -24,8 +24,8 @@
         </Canvas.Background>
       </Canvas>
       <Canvas>
-        <Image Width="480" Height="800" Source="{Binding Picture}" Visibility="{Binding Picture, Converter={StaticResource NullToVisibilityConverter}}" Stretch="UniformToFill" />
-        <Image Width="480" Height="800" Source="{Binding OverlayedPicture}" Opacity="{Binding MaskOpacityLevel}">
+        <Image Width="456" Height="696" Source="{Binding Picture}" Visibility="{Binding Picture, Converter={StaticResource NullToVisibilityConverter}}" Stretch="Uniform" />
+        <Image Width="456" Height="696" Source="{Binding OverlayedPicture}" Opacity="{Binding MaskOpacityLevel}"  Stretch="Uniform">
           <Image.OpacityMask>
             <ImageBrush ImageSource="{Binding OpacityMask}" Stretch="None" />
           </Image.OpacityMask>
